# ssamantle-server

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py  secrets.py  utils.py  vectors.py
app/api/routes/: games.py  health.py  items.py  similarity.py  users.py
app/api/v1/: auth.py  games.py
app/core/: config.py  logger.py
app/db/: database.py  enums.py  models.py
app/schemas/: game.py  item.py  user.py
app/utils/: __init__.py  logging.py
docker/: docker-compose.yml
scripts/: filter_words.py  generate_secrets.py  process_vecs.py  requirements.txt
